fixed font size on iphone rotation

--- a/sc.css
+++ b/sc.css
@@ -184,7 +184,7 @@ p{
 
 body{
     transform:scale(0.6);
-    background: rgba(255, 192, 203, 0.3);
+    background: pink;
     background: cover;
     background-size: 200%;
     overflow: hidden;
@@ -197,7 +197,7 @@ body{
     width:300px;
     border-radius:40px;
     display: block;
-    margin-top: -100px;fi
+    margin-top: -100px;
 }
 .screen{
     height:60px;
@@ -232,7 +232,7 @@ p{
     width:40px;
     height:40px;
     border:none;
-    font-size: 11px;
+    font-size: 10px;
     border-radius:50%;
     margin-left: 10px;
     cursor:pointer;
@@ -257,7 +257,7 @@ p{
 .button.silver{
     color:black;
     background-color: #647489;
-    font-size: 13px;
+    font-size: 11px;
 }
 .button.red{
     background-color: red;
